--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,17 +1,22 @@
-<h1>投稿一覧</h1>
-
-<% @lists.each do |list| %>
-
-  <p>タイトル</p>
-  <span>
-    <%= link_to list.title,"/lists/#{list.id}" %>
-  </span>
+<div class="list-wrap">
   
-  <p>画像</p>
-  <% if list.image.attached? %>
-    <%= image_tag list.image, size: "200×200" %>
-  <% else  %>
-    <%= image_tag 'no_image', size: "200×200" %>
-  <% end %>
+  <% @lists.each do |list| %>
+    
+    <div class="list-box">
+      
+      <% if list.image.attached? %>
+        <%= image_tag list.image,size: "200x200" %>
+      <% else %>
+        <%= image_tag 'no_image',size: "200x200" %>
+      <% end %>
+      
+      <div class="list-comment">
+        <span class="list-body"><%= list.body %></span>        <!--Listモデルのbodyカラムに入っているデータを呼び出し-->
+        <span class="list-title"><%= link_to list.title, list_path(list.id) %></span>
+      </div>
+      
+    </div>
+    
+  <% end %>  
   
-<% end %>
+</div>
